--- a/loop_analysis/main.ipynb
+++ b/loop_analysis/main.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c172f8cd-ca79-4d21-a342-c6aa86e4e66a",
+   "metadata": {},
+   "source": [
+    "## Packages\n",
+    "Install necessary packages: numpy, control, and multiprocessing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3a1ab5f2-273c-4d2b-8ffe-6043a951214d",
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "cc8fc33f-ab81-440e-99c9-d7296548407b",
    "metadata": {},
    "outputs": [],
@@ -236,14 +245,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "id": "27d0ef4c-b134-48d6-9bac-68a4606cc4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_sapwin(filename):\n",
+    "    with open(filename, 'r') as f:\n",
+    "        f.readlines()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "401cbeb9-33ec-42aa-8db9-22dd521d3451",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['v1:\\n', '\\n', '+ (  - Ri Rmfb3 )\\n', '+ (  - Cl Ri Rl Rmfb3 + Cl Rfb Ri Rmfb ) j w\\n', '- (  Cmfb Cl Ri Rmfb Rmfb2 Rmfb3 + Cmfb Cl Rfb Rmfb Rmfb2 Rmfb3 + Cmfb Cl Rfb Ri Rmfb Rmfb3 + Cmfb Cl Rfb Ri Rmfb Rmfb2 ) w^2\\n', '- (  Cmfb Cl Ci Rfb Ri Rmfb Rmfb2 Rmfb3 ) j w^3\\n', '------------------------------------------------------------------------------\\n', '+ (  Rfb Ri )\\n', '+ (  Cl Rfb Ri Rmfb + Cl Rfb Ri Rl + Cmfb Ri Rmfb2 Rmfb3 + Cmfb Rfb Rmfb2 Rmfb3 + Cmfb Rfb Ri Rmfb3 + Cmfb Rfb Ri Rmfb2 + Lf Ri ) j w\\n', '- (  Cf Lf Rfb Ri + Cmfb Ci Rfb Ri Rmfb2 Rmfb3 + Cmfb Cl Ri Rmfb Rmfb2 Rmfb3 + Cmfb Cl Ri Rl Rmfb2 Rmfb3 + Cmfb Cl Rfb Rmfb Rmfb2 Rmfb3 + Cmfb Cl Rfb Rl Rmfb2 Rmfb3 + Cmfb Cl Rfb Ri Rmfb Rmfb3 + Cmfb Cl Rfb Ri Rmfb Rmfb2 + Cmfb Cl Rfb Ri Rl Rmfb3 + Cmfb Cl Rfb Ri Rl Rmfb2 + Cl Lf Ri Rmfb3 + Cl Lf Ri Rmfb + Cl Lf Ri Rl + Cl Lf Rfb Ri + Cmfb Lf Rmfb2 Rmfb3 + Cmfb Lf Ri Rmfb3 + Cmfb Lf Ri Rmfb2 ) w^2\\n', '- (  Cl Cf Lf Rfb Ri Rmfb + Cl Cf Lf Rfb Ri Rl + Cmfb Cf Lf Ri Rmfb2 Rmfb3 + Cmfb Cf Lf Rfb Rmfb2 Rmfb3 + Cmfb Cf Lf Rfb Ri Rmfb3 + Cmfb Cf Lf Rfb Ri Rmfb2 + Cmfb Cl Ci Rfb Ri Rmfb Rmfb2 Rmfb3 + Cmfb Cl Ci Rfb Ri Rl Rmfb2 Rmfb3 + Cmfb Ci Lf Ri Rmfb2 Rmfb3 + Cmfb Cl Lf Rmfb Rmfb2 Rmfb3 + Cmfb Cl Lf Rl Rmfb2 Rmfb3 + Cmfb Cl Lf Ri Rmfb2 Rmfb3 + Cmfb Cl Lf Ri Rmfb Rmfb3 + Cmfb Cl Lf Ri Rmfb Rmfb2 + Cmfb Cl Lf Ri Rl Rmfb3 + Cmfb Cl Lf Ri Rl Rmfb2 + Cmfb Cl Lf Rfb Rmfb2 Rmfb3 + Cmfb Cl Lf Rfb Ri Rmfb3 + Cmfb Cl Lf Rfb Ri Rmfb2 ) j w^3\\n', '+ (  Cmfb Ci Cf Lf Rfb Ri Rmfb2 Rmfb3 + Cmfb Cl Cf Lf Ri Rmfb Rmfb2 Rmfb3 + Cmfb Cl Cf Lf Ri Rl Rmfb2 Rmfb3 + Cmfb Cl Cf Lf Rfb Rmfb Rmfb2 Rmfb3 + Cmfb Cl Cf Lf Rfb Rl Rmfb2 Rmfb3 + Cmfb Cl Cf Lf Rfb Ri Rmfb Rmfb3 + Cmfb Cl Cf Lf Rfb Ri Rmfb Rmfb2 + Cmfb Cl Cf Lf Rfb Ri Rl Rmfb3 + Cmfb Cl Cf Lf Rfb Ri Rl Rmfb2 + Cmfb Cl Ci Lf Ri Rmfb Rmfb2 Rmfb3 + Cmfb Cl Ci Lf Ri Rl Rmfb2 Rmfb3 + Cmfb Cl Ci Lf Rfb Ri Rmfb2 Rmfb3 ) w^4\\n', '+ (  Cmfb Cl Ci Cf Lf Rfb Ri Rmfb Rmfb2 Rmfb3 + Cmfb Cl Ci Cf Lf Rfb Ri Rl Rmfb2 Rmfb3 ) j w^5\\n', '\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_sapwin(\"Class-D MFB.out\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b79858f0-a772-47db-8cb1-52470144b2b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67cd6fb236f347879843119735d66c32",
+       "model_id": "e5716ea3b8684c3ca6960d8e563cbe81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,8 +309,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 264 ms, sys: 231 ms, total: 495 ms\n",
-      "Wall time: 892 ms\n"
+      "CPU times: user 400 ms, sys: 238 ms, total: 638 ms\n",
+      "Wall time: 965 ms\n"
      ]
     }
    ],
