--- a/loop_analysis/main.ipynb
+++ b/loop_analysis/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3a1ab5f2-273c-4d2b-8ffe-6043a951214d",
    "metadata": {
     "scrolled": true
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install -r requirements.txt -U"
+    "!pip install numpy control multiprocess matplotlib ipympl -U"
    ]
   },
   {
