--- a/loop_analysis/.virtual_documents/main.ipynb
+++ b/loop_analysis/.virtual_documents/main.ipynb
@@ -6,7 +6,13 @@
 # END_CELL_MAGIC
 
 
-# Install and import necessary packages
+# Import necessary packages
+from typing import (
+    Callable
+)
+
+import re
+
 import numpy as np
 import control as ct
 
@@ -79,11 +85,11 @@ def plot(
             end = omega[ind+1]
             p_err = np.nan
 
-            max_iters = 1000
+            max_iters = 100
             iters = 0
-            while not np.isclose(p_err, -np.pi, rtol=1e-8, atol=0.):
+            while not np.isclose(p_err, -np.pi, rtol=1e-15, atol=1e-11):
                 if iters > max_iters:
-                    raise ValueError(f'Binary search did not converge in {max_iters} iterations')
+                    raise ValueError(f'Binary search did not converge in {max_iters} iterations, err={p_err}')
                 # Guaranteed to run once and set mid because p_err == nan
                 mid = (start + end) / 2
 
@@ -178,7 +184,10 @@ def plot(
 
 
 
-def lpf(L, C, R_load) -> ct.TransferFunction:
+def lpf(L: float, C: float, R_load: float) -> ct.TransferFunction:
+    """ Function representing a common 2nd order output filter for Class-D amplifiers.
+    Returns a transfer function per the corresponding values
+    """
     s = ct.tf('s')
 
     return R_load / (R_load * L * C * s**2 + L * s + R_load)
@@ -197,9 +206,11 @@ def fbn_example(R_in, C_in, R_lead, C_lead, R_fb, R_sep) -> ct.TransferFunction:
     return H
 
 
-import re
-
-def load_sapwin(filename):
+def load_sapwin(filename: str) -> Callable[,ct.TransferFunction]:
+    """ Parses a SapWin output file into a function that takes in component values and 
+    outputs a transfer function. Allows offloading of the symbolic analysis of feedback
+    networks for faster prototyping.
+    """
     with open(filename, 'r') as f:
         lines = f.readlines()[2:]
 
@@ -265,25 +276,30 @@ def load_sapwin(filename):
     return func
 
 
-out = lpf(22e-6, 4.7e-6, 4)
 
-compf = 5e5
-compr = 2
-comp = ct.zpk([-compf-1j, -compf+1j], [-compf*compr] * 2, 1e-1)
 
-iff = out.bandwidth() * 0.7
+
+out = lpf(22e-6, 3.3e-6, 4)
+
+compf = 2e6
+compr = [3, 5]
+comp = ct.zpk([-compf-1j, -compf+1j], [-r * compf for r in compr], 4.5)
+
+iff = 50e3*2*np.pi
 
 i = 1
-for fsf, q in [(1.000, 0.5412), (1.000, 1.3065)]:
+for fsf, q in [(1.4192, 0.5219), (1.5912, 0.8055)]:
     sf = iff * fsf
     i *= ct.tf([sf**2], [1, sf*fsf/q, sf**2])
 
 fbn = out * (comp + i)
 
+delay = 180e-9
+
 plt.clf()
 
 plot_kwargs = {'Hz': True, 'dB': True, 'omega_limits': (10, 100e6)}
-for tf in (comp, i, out, fbn):
+for tf in (comp, i, out, fbn, fbn * ct.tf(*ct.pade(delay, n=2))):
     print(tf)
     ct.bode_plot(tf, **plot_kwargs)
 
@@ -291,7 +307,7 @@ plt.show()
 
 
 # START_CELL_MAGIC("time", "")
-plot(fbn, 10, 20e6, delay=100e-9)
+plot(fbn, 10, 20e6, delay=delay)
 plt.show()
 # END_CELL_MAGIC
 
@@ -299,7 +315,10 @@ plt.show()
 def disp(lst):
     return np.array(lst).flatten()
 
+max_gain = 8
+
 for tf in (comp, i, out):
+    tf /= max_gain
     print(tf)
     print(*map(disp, (tf.num, tf.den)))
 
